update dependencies & apply ktlint

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,19 @@
+pluginManagement {
+    repositories {
+        mavenCentral()
+        google()
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        mavenCentral()
+        google()
+    }
+}
+
+
 rootProject.name='Audio Effect'
 include ':app'
 include ':audioeffects'
