--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.xeinebiu.audioeffects.app.MainActivity">
+        <activity android:name="com.xeinebiu.audioeffects.app.MainActivity" android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
