--- a/audioeffects/build.gradle
+++ b/audioeffects/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    implementation 'com.google.android.material:material:1.10.0-alpha01'
+    implementation 'com.google.android.material:material:1.8.0'
 }
 
 project.afterEvaluate {
@@ -45,7 +45,7 @@ project.afterEvaluate {
                 from components.release
 
                 groupId = 'com.github.xeinebiu'
-                version = '1.4.1'
+                version = '1.4.2'
             }
         }
     }
